<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/actionBarSize"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header" />

    <TextView
        android:id="@+id/tv_door_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:drawableStart="@mipmap/ic_door"
        android:gravity="center"
        android:textAlignment="center"
        android:theme="@style/MediumText"
        tool:text="officeMain Door" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/doorTitleWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_door_title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/et_door_title"
            style="@style/LightEditText"
            android:maxLength="50"
            android:maxLines="2"
            android:textAlignment="center"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ01234567890 "
            android:theme="@style/LightEditTextTheme"
            android:visibility="invisible" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/passageModeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_10sdp"
        android:layout_below="@+id/doorTitleWrapper"
        android:layout_centerHorizontal="true"
        android:checked="false"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/passage_mode"
        app:showText="true"
        android:textOff="OFF"
        app:switchPadding="5dp"
        android:textOn="ON"
        app:switchTextAppearance="@style/SwitchTextAppearence"
        android:visibility="gone"
        android:thumb="@drawable/custom_thumb_switch"
        app:switchMinWidth="@dimen/_35sdp"
        app:track="@drawable/custom_track_switch"
        android:textSize="@dimen/_14sdp" />


    <LinearLayout
        android:id="@+id/ll_lock_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="50dp">

   <!--     android:text="@string/tap_to_engage"-->

        <TextView
            android:id="@+id/tv_engage_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:theme="@style/MediumText" />

        <ImageView
            android:id="@+id/iv_engage"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/lock_wave" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="1">

            <RadioButton
                android:id="@+id/rb_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:checked="false"
                android:text="@string/wifi" />

            <RadioButton
                android:id="@+id/rb_ble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:checked="true"
                android:text="@string/bluetooth" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_engage_to_proceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="@string/engage_to_proceed"/>

        <LinearLayout
            android:id="@+id/ll_user_history_container_v3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_history_v3"
                    style="@style/LockDetailButton"
                    android:layout_gravity="top"
                    android:drawableTop="@mipmap/ic_history"
                    android:text="@string/iv_history"
                    android:visibility="visible" />
            </LinearLayout>

            <View
                style="@style/Divider"
                android:layout_width="@dimen/_50sdp"
                android:layout_marginTop="10dp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_user_history_transfer_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="4">

            <Button
                android:id="@+id/btn_user"
                style="@style/LockDetailButton"
                android:layout_gravity="top"
                android:drawableTop="@mipmap/ic_user_gray"
                android:text="@string/iv_users"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_fp"
                style="@style/LockDetailButton"
                android:layout_gravity="top"
                android:drawableTop="@mipmap/ic_fp"
                android:text="@string/finger_print"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_rfid"
                style="@style/LockDetailButton"
                android:layout_gravity="top"
                android:drawableTop="@mipmap/ic_rfid_details"
                android:text="@string/rfid"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_history"
                style="@style/LockDetailButton"
                android:layout_gravity="top"
                android:drawableTop="@mipmap/ic_history"
                android:text="@string/iv_history"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_manage_pin"
                style="@style/LockDetailButton"
                android:layout_gravity="top"
                android:drawableTop="@mipmap/ic_pin"
                android:text="@string/pin"
                android:visibility="gone" />

        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp">

            <TextView
                android:id="@+id/lblBatteryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                style="@style/MediumText"
                android:layout_marginLeft="5dp"
                android:text="Lock Battery"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_battery"
                style="@style/MediumText"
                android:drawableStart="@mipmap/ic_battery_full"
                android:gravity="center"
                android:text=""
                android:textColor="@color/dark_gray"
                android:layout_below="@id/lblBatteryLabel"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_factory_reset"
                style="@style/MediumText"
                android:layout_alignParentEnd="true"
                android:drawableStart="@mipmap/ic_factory_reset"
                android:gravity="center"
                android:text="@string/factory_reset"
                android:textColor="@color/dark_gray"
                android:layout_below="@id/lblBatteryLabel"
                android:visibility="gone"/>

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>