<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <include layout="@layout/layout_header" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_trasfer_owner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_trasfer_owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/tv_transfer_owner"
                android:textSize="@dimen/large_text_size" />

            <ImageView
                android:id="@+id/iv_transfer_owner"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_below="@+id/tv_trasfer_owner"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/transfer_ownership" />

            <TextView
                android:id="@+id/tv_owner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_transfer_owner"
                android:gravity="center"
                android:textSize="@dimen/large_text_size"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_new_owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_owner_name"
                android:gravity="center"
                android:text="@string/new_owner"
                android:textSize="@dimen/small_text_size"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_add_continue"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_new_owner"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/add" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
